<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              >
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="#ffffffff"
            >
        <com.hekr.android.app.ui.IconView
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="7dp"
                android:clickable="true"
                android:onClick="navBack"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="#333333"
                android:text="&#xf060;" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/help_activity_title"
                android:textSize="20dp">

        </TextView>

    </RelativeLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
                  android:background="#fff3f3f3">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:textColor="#ff000000"
                  android:text="@string/help_activity_content_title"
                  android:layout_marginTop="15dp"
                  android:textSize="18dp"/>
        <EditText android:layout_width="280dp"
                  android:layout_height="120dp"
                  android:id="@+id/tucaocontent"
                  android:layout_gravity="center_horizontal"
                  android:cursorVisible="true"
                  android:layout_marginTop="32dp"
                  android:hint="@string/help_activity_hint"
                  android:background="@drawable/tucaoeditbg"/>
        <ImageButton android:layout_width="280dp"
                     android:layout_height="43dp"
                     android:id="@+id/sendtucao"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="98dp"
                     android:background="@drawable/tucao_image_btn_press"/>

    </LinearLayout>

</LinearLayout>
