<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="225dp"
    android:layout_height="fill_parent"
    android:background="@drawable/juxing"
    android:fadingEdge="none">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"/>

    <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp">
        <TextView
                android:id="@+id/aboutOurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/guanyuwomen"/>
        <TextView
                android:id="@+id/us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="25dp"
                android:text="@string/about_activity_us"
                android:textSize="16dp"
                android:textColor="#ffffffff"/>
        <TextView
                android:id="@+id/useHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:background="@drawable/tucao"/>
        <TextView
                android:id="@+id/tucao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="25dp"
                android:text="@string/help_activity_tucao"
                android:textSize="16dp"
                android:textColor="#ffffffff"/>
        <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:onClick=""
                android:background="@drawable/tuichu"/>
        <TextView
                android:id="@+id/tuichu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/tuichu_activity_tuichu"
                android:textSize="16dp"
                android:textColor="#ffffffff"/>
    </LinearLayout>

</RelativeLayout>