<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/connectbeijing"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="0dp"
    android:id="@+id/firstrelative"
    >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondrelative"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/toplinear"
            >
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/add_activity_content_title"
                android:typeface="sans"
                android:textSize="40dp"
                android:gravity="center"
                android:textColor="#ffffffff"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/hekr_config"
                    android:textSize="16dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="#ffffffff"
                    android:id="@+id/msg" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:id="@+id/relative"
        android:layout_below="@+id/secondrelative"
        android:weightSum="1"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="fill_parent"
            android:id="@+id/leftrelative">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/leftrelative"
            android:layout_toLeftOf="@+id/rightrelative"
            android:id="@+id/middlerelative">


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:textSize="15dp"
                android:id="@+id/ssid"
                android:textColorHint="#ffffffff"
                android:cursorVisible="false"
                android:textColor="#ffffffff"
                android:background="@drawable/rounded_editview"
                android:gravity="center"
                android:layout_below="@+id/setspinner"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:layout_alignRight="@+id/set"
                android:layout_alignLeft="@+id/set"
                />


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:textSize="15dp"
                android:id="@+id/setmima"
                android:hint="@string/hekr_config_wifipass"
                android:textColorHint="#ffffffff"
                android:cursorVisible="false"
                android:textColor="#ffffffff"
                android:background="@drawable/rounded_editview"
                android:gravity="center"
                android:layout_below="@+id/setspinner"
                android:layout_marginTop="90dp"
                android:layout_centerHorizontal="true"
                android:layout_alignRight="@+id/set"
                android:layout_alignLeft="@+id/set"
                />

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:id="@+id/wifiset"
                android:background="@drawable/image_btn_press"
                android:layout_alignRight="@+id/set"
                android:layout_alignLeft="@+id/set"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="33dp"
                android:id="@+id/softap"
                android:layout_alignRight="@+id/set"
                android:layout_alignLeft="@+id/set"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="3dp"
                android:cursorVisible="false"
                android:background="#00000000"
                android:textColor="#ffffffff"
                android:text="@string/hekr_config_notconnect"
                />

        </RelativeLayout>
        <RelativeLayout android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="fill_parent"
            android:id="@+id/rightrelative"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            >

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>