<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/connectbeijing"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="0dp"
                android:id="@+id/firstrelative"
                >
                <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/secondrelative"
                        android:layout_alignParentTop="true">
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:id="@+id/toplinear"
                        >
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="66dp"
                              android:text="@string/add_activity_content_title"
                              android:typeface="sans"
                              android:textSize="40dp"
                              android:gravity="center"
                              android:textColor="#ffffffff"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/add_activity_content_threestep"
                              android:textSize="16dp"
                              android:textColor="#ffffffff"/>
                </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"
                        android:id="@+id/relative"
                        android:layout_below="@+id/secondrelative"
                        android:weightSum="1"
                        >
                    <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="fill_parent"
                            android:id="@+id/leftrelative"
                            >
                        <ImageView
                                android:id="@+id/firsticon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/yihao"
                                android:layout_marginTop="69dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"/>
                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/xian"
                                android:id="@+id/xianone"
                                android:layout_below="@+id/firsticon"
                                android:layout_above="@+id/secondicon"
                                android:layout_centerHorizontal="true"/>
                        <ImageView
                                android:id="@+id/secondicon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/erhao"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                />
                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/xiantwo"
                                android:layout_above="@+id/thirdicon"
                                android:layout_below="@+id/secondicon"
                                android:layout_alignLeft="@+id/xianone"
                                android:layout_alignStart="@+id/xianone"
                                android:id="@+id/xiantwo"/>
                        <ImageView
                                android:id="@+id/thirdicon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:background="@drawable/sanhao"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="50dp"/>

                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_weight="0.6"
                            android:layout_height="fill_parent"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:layout_toRightOf="@+id/leftrelative"
                            android:layout_toLeftOf="@+id/rightrelative"
                            android:id="@+id/middlerelative">

                        <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="43dp"
                                android:layout_marginTop="58dp"
                                android:layout_centerHorizontal="true"
                                android:id="@+id/set"
                                android:background="@drawable/choosevotedevice"/>

                        <TextView
                                android:id="@+id/votemessage"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:layout_marginLeft="0dp"
                                android:layout_marginTop="10dp"
                                android:layout_below="@+id/set"
                                android:textSize="15dp"
                                android:textColor="#ffffffff"
                                android:text=""/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_above="@+id/setspinner"
                                android:layout_centerHorizontal="true"
                                android:textColor="#ffffffff"
                                android:text=""
                                android:layout_marginBottom="25dp"
                                />
                        <Spinner
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:id="@+id/setspinner"
                                android:spinnerMode="dialog"
                                android:gravity="center"
                                android:layout_gravity="center_horizontal"
                                android:layout_centerVertical="true"
                                android:background="@drawable/rounded_editview"
                                android:listSelector="#00000000"
                                android:layout_alignRight="@+id/set"
                                android:layout_alignLeft="@+id/set"/>
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:textSize="15dp"
                                android:id="@+id/setmima"
                                android:hint="@string/add_activity_prompt_innnerpassword"
                                android:textColorHint="#ffffffff"
                                android:cursorVisible="false"
                                android:textColor="#ffffffff"
                                android:background="@drawable/rounded_editview"
                                android:password="true"
                                android:gravity="center"
                                android:layout_below="@+id/setspinner"
                                android:layout_marginTop="15dp"
                                android:layout_centerHorizontal="true"
                                android:layout_alignRight="@+id/set"
                                android:layout_alignLeft="@+id/set"
                                />
                        <ImageButton
                                android:layout_width="fill_parent"
                                android:layout_height="42dp"
                                android:id="@+id/wifiset"
                                android:background="@drawable/image_btn_press"
                                android:layout_alignRight="@+id/set"
                                android:layout_alignLeft="@+id/set"
                                android:layout_alignParentBottom="true"
                                android:gravity="center"
                                android:layout_gravity="center_horizontal"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="50dp"/>
                        <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/show_router_password"
                                android:textColor="#ffffffff"
                                android:id="@+id/router_password"
                                android:layout_below="@+id/setmima"
                                android:layout_alignLeft="@+id/setmima"
                                android:gravity="center"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:paddingLeft="5dp"
                                android:button="@drawable/checkbox_press"
                                android:checked="false"/>
                    </RelativeLayout>
                    <RelativeLayout android:layout_width="0dp"
                                    android:layout_weight="0.2"
                                    android:layout_height="fill_parent"
                                    android:id="@+id/rightrelative"
                                    android:layout_alignParentTop="true"
                                    android:layout_alignParentRight="true"
                                    android:layout_alignParentBottom="true"
                                    >

                    </RelativeLayout>
                </LinearLayout>

</RelativeLayout>
        <!--android:text="@string/add_activity_prompt_chooserouter" -->